--- a/package.json
+++ b/package.json
@@ -1,39 +1,28 @@
 {
-  "name": "ngx-drag-and-drop-lists",
-  "version": "1.3.2",
+  "name": "@vfz/ngx-drag-and-drop-lists",
+  "version": "2.0.0",
   "description": "angular drag and drop component for lists",
-  "main": "index.js",
   "scripts": {
     "ngc": "ngc",
     "build": "npm run ngc && node ./scripts/copy-package",
-    "publishPackage": "npm run build && cd dist && npm publish",
+    "publishPackage": "cd dist && npm publish",
+    "create-package": "npm run-script lib:remove-dist && npm run-script packagr && npm run-script lib:pack && npm run-script lib:copy-packed-file && npm run-script lib:remove-packed-file",
+    "create-package-and-publish": "npm run-script create-package && npm run-script lib:publish",
+    "lib:copy-packed-file": "cp dist\\@vfz-ngx-drag-and-drop-lists\\*.tgz dist",
+    "lib:lint": "ng lint vfz-ui-lib",
+    "lib:pack": "cd ./dist/@vfz-ngx-drag-and-drop-lists && npm pack",
+    "lib:publish": "npm publish dist/@vfz-ngx-drag-and-drop-lists",
+    "lib:remove-dist": "rimraf dist/@vfz-ngx-drag-and-drop-lists",
+    "lib:remove-packed-file": "rimraf ./dist/@vfz-ngx-drag-and-drop-lists/*.tgz",
+    "packagr": "ng-packagr -p src/ng-package.json ",
     "dev": "tsc --watch"
   },
-  "precommit": [
-    "build"
-  ],
-  "repository": {
-    "type": "git",
-    "url": "git+https://github.com/misha130/ngx-drag-and-drop-lists.git"
-  },
-  "keywords": [
-    "drag-and-drop",
-    "angular2",
-    "angular4",
-    "angular9",
-    "alignment"
-  ],
-  "author": "Misha Tarnortusky",
-  "license": "MIT",
-  "bugs": {
-    "url": "https://github.com/misha130/ngx-drag-and-drop-lists/issues"
-  },
-  "homepage": "https://github.com/misha130/ngx-drag-and-drop-lists#readme",
   "dependencies": {},
   "devDependencies": {
     "@angular/animations": "~11.0.5",
     "@angular/common": "~11.0.5",
     "@angular/compiler": "~11.0.5",
+    "@angular/compiler-cli": "^11.0.5",
     "@angular/core": "^11.0.5",
     "@angular/forms": "~11.0.5",
     "@angular/platform-browser": "^11.0.5",
@@ -46,6 +35,7 @@
     "rxjs": "^6.6.3",
     "tslint": "^6.1.3",
     "typescript": "~4.0.5",
-    "zone.js": "^0.11.3"
+    "zone.js": "^0.11.3",
+    "ng-packagr": "^11.0.3"
   }
 }
